feat: re-architecture of the server
